# backend-flask

./: .env.example  .gitignore  Makefile  main.py  pyproject.toml  ruff.toml
app/: routes.py
authentication/: routes.py
configurations/: cloudinary.py  cloudinary_config.py  db_config.py  envs.py  envs_config.py  mail_config.py
database/: __init__.py
database/models/: blacklist.py  images.py  messages.py  pages.py  projects.py  skills.py  skills_projects.py  users.py
images/: routes.py
mailer/: routes.py
middlewares/: verify_token.py
pages/: routes.py
projects/: routes.py
skills/: routes.py
tests/: conftest.py  test_app.py  test_images.py  test_pages.py  utils.py
tests-http/: .env.example  auth.http  images.http  mailer.http  pages.http  projects.http  skills.http
tests/authentication/: test_refresh_token.py  test_signin.py  test_signout.py  test_verify_token.py
tests/images/: test_delete_image.py  test_get_image.py  test_send_image.py
tests/mailer/: test_mailer.py
tests/pages/: test_create_page.py  test_delete_page.py  test_get_page.py  test_update_page.py
tests/projects/: test_create_project.py  test_delete_project.py  test_get_project_by_id.py  test_get_projects.py  test_update_project.py
tests/skills/: test_create_skill.py  test_delete_skill.py  test_get_skill.py  test_update_skill.py
tests/users/: test_create_user.py  test_delete_user.py  test_get_user.py  test_recovery_user.py  test_update_user.py
users/: __init__.py  routes.py
